# mapping-nav

./: $null  .gitignore  ARCHITECTURE.md  CMakeLists.txt  PRE_MISSION_CHECKLIST.md  README.md  RUN_INSTRUCTIONS.md  WORKSPACE_REORGANIZATION.md  mapping_launch.py  navigation_launch.py
Rover Assembly URDF/: CMakeLists.txt  package.xml
Rover Assembly URDF/config/: joint_names_Rover Assembly URDF.yaml
Rover Assembly URDF/launch/: display.launch  gazebo.launch
Rover Assembly URDF/meshes/: front_right_wheel.STL  rear_left_wheel.STL
Rover Assembly URDF/urdf/: Rover Assembly URDF.csv  Rover Assembly URDF.urdf
auto_ws/src/navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
auto_ws/src/navigation/config/: controller_params.yaml  costmap_params.yaml  ekf_sim.yaml  nav2_params.yaml
auto_ws/src/navigation/launch/: gazebo_navigation_test.launch.py
auto_ws/src/navigation/src/: autonomous_phase_manager.py  collision_recovery.py  dummy_depth_publisher.py  frontier_exploration.py  navigation_manager.py  start_frame_reference.py  waypoint_handler.py
auto_ws/src/object_detection/: CMakeLists.txt  package.xml
auto_ws/src/object_detection/src/: object_reporter.py  setup.cfg  setup.py
auto_ws/src/realsense_launch/: CMakeLists.txt  package.xml
auto_ws/src/rover_assembly_urdf/: CMakeLists.txt  package.xml
auto_ws/src/rover_assembly_urdf/launch/: gazebo_launch.py
auto_ws/src/rover_assembly_urdf/meshes/: front_left_wheel.STL  rear_right_wheel.STL
mpu6500-main/mpu6500-main/doc/html/: annotated.html  classes.html  dir_000001_000002.html  dir_000002_000004.html  dir_000005_000002.html  dir_11ec664f88f5f079ad4de1adb8458c37.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b31d54d5631803016a26f28213a41162.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  driver__mpu6500_8c.html  driver__mpu6500_8c__incl.md5  driver__mpu6500_8c_source.html  driver__mpu6500_8h.html  driver__mpu6500_8h__dep__incl.md5  driver__mpu6500_8h__incl.md5  driver__mpu6500_8h_source.html  driver__mpu6500__basic_8c.html  driver__mpu6500__basic_8c__incl.md5  driver__mpu6500__basic_8c_source.html  driver__mpu6500__basic_8h.html  driver__mpu6500__basic_8h__dep__incl.md5  driver__mpu6500__basic_8h__incl.md5  driver__mpu6500__basic_8h_source.html  driver__mpu6500__code_8h.html  driver__mpu6500__code_8h__dep__incl.md5  driver__mpu6500__code_8h__incl.md5  driver__mpu6500__code_8h_source.html  driver__mpu6500__dmp_8c.html  driver__mpu6500__dmp_8c__incl.md5  driver__mpu6500__dmp_8c_source.html  driver__mpu6500__dmp_8h.html  driver__mpu6500__dmp_8h__dep__incl.md5  driver__mpu6500__dmp_8h__incl.md5  driver__mpu6500__dmp_8h_source.html  driver__mpu6500__dmp__pedometer__test_8c.html  driver__mpu6500__dmp__pedometer__test_8c__incl.md5  driver__mpu6500__dmp__pedometer__test_8c_source.html  (+127 more)
mpu6500-main/mpu6500-main/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  pages_0.js  pages_1.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js
mpu6500-main/mpu6500-main/doc/mainpage/: mainpage.h
mpu6500-main/mpu6500-main/project/raspberrypi4b/driver/src/: raspberrypi4b_driver_mpu6500_interface.c
mpu6500-main/mpu6500-main/project/raspberrypi4b/src/: main.c
mpu6500-main/mpu6500-main/project/stm32f407/MDK/: stm32f407.uvprojx
mpu6500-main/mpu6500-main/project/stm32f407/driver/src/: stm32f407_driver_mpu6500_interface.c
mpu6500-main/mpu6500-main/project/stm32f407/interface/src/: iic.c
mpu6500-main/mpu6500-main/project/stm32f407/usr/src/: main.c
mpu6500-main/mpu6500-main/src/: driver_mpu6500.c
mpu6500-main/mpu6500-main/test/: driver_mpu6500_dmp_pedometer_test.c  driver_mpu6500_dmp_pedometer_test.h  driver_mpu6500_dmp_read_test.c  driver_mpu6500_dmp_read_test.h  driver_mpu6500_dmp_tap_orient_motion_test.c  driver_mpu6500_dmp_tap_orient_motion_test.h  driver_mpu6500_fifo_test.c  driver_mpu6500_fifo_test.h  driver_mpu6500_read_test.c  driver_mpu6500_read_test.h  driver_mpu6500_register_test.c  driver_mpu6500_register_test.h
src/navigation/: CMakeLists.txt  navigate_w_replanning.xml  package.xml
src/navigation/config/: costmap_params.yaml  nav2_params.yaml
src/navigation/example_input/: landmarks.yaml  navigation.rviz
src/navigation/launch/: nav2_complete.launch.py
src/navigation/src/: autonomous_phase_manager.py  collision_recovery.py  frontier_exploration.py  navigation_manager.py  start_frame_reference.py  waypoint_handler.py
src/object_detection/: object_reporter.py
