<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.1.0</version>
  <description>
    Object Detection and Reporting Package for Australian Rover Challenge 2026
    
    Handles detection, localization, and reporting of:
    - Colored cubes (red, green, blue, white)
    - Landmarks and their placards
    - Object localization using TF transforms
  </description>
  
  <maintainer email="marlambekovdaulet@gmail.com">Your Team</maintainer>
  <license>Apache-2.0</license>
  
  <author email="marlambekovdaulet@gmail.com">Your Team</author>
  
  <!-- Build and runtime dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  
   <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-yaml</depend>
  <depend>tf_transformations</depend>
  <depend>python3-opencv</depend>


  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
